--- a/AutoLayout/AutoLayout/Base.lproj/Main.storyboard
+++ b/AutoLayout/AutoLayout/Base.lproj/Main.storyboard
@@ -20,6 +20,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bjN-XT-A4v">
                                 <rect key="frame" x="36" y="40" width="57" height="30"/>
+                                <color key="backgroundColor" red="0.70780098899999999" green="1" blue="0.12649088459999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Top Left"/>
                                 <connections>
                                     <action selector="topLeftPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5AD-L7-zoK"/>
@@ -27,6 +28,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="559-bk-2Ta">
                                 <rect key="frame" x="194" y="518" width="90" height="30"/>
+                                <color key="backgroundColor" red="0.70780098899999999" green="1" blue="0.12649088459999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Bottom Right"/>
                                 <connections>
                                     <action selector="bottomRightPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ixi-OV-rAT"/>
@@ -34,6 +36,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tjz-0R-nSW">
                                 <rect key="frame" x="218" y="40" width="66" height="30"/>
+                                <color key="backgroundColor" red="0.70780098899999999" green="1" blue="0.12649088459999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Top Right"/>
                                 <connections>
                                     <action selector="topRightPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aMT-Kr-zu5"/>
@@ -41,12 +44,14 @@
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DYL-CH-b0y">
                                 <rect key="frame" x="26" y="273" width="268" height="21"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3L0-ZU-NPe">
                                 <rect key="frame" x="36" y="518" width="81" height="30"/>
+                                <color key="backgroundColor" red="0.70780098899999999" green="1" blue="0.12649088459999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Bottom Left"/>
                                 <connections>
                                     <action selector="bottomLeftPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Ys-b8-Ysx"/>
