--- a/RSSReader/RSSReader/Base.lproj/Main.storyboard
+++ b/RSSReader/RSSReader/Base.lproj/Main.storyboard
@@ -28,12 +28,20 @@
                                     <action selector="getData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3tS-Ca-2rI"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2sA-Nv-iek">
+                                <rect key="frame" x="20" y="162" width="285" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="zkI-eu-KG4"/>
                     <connections>
                         <outlet property="okButton" destination="yHK-Hn-sDN" id="HXX-dD-Iad"/>
+                        <outlet property="outputMessage" destination="2sA-Nv-iek" id="w0W-cV-TUQ"/>
                         <outlet property="outputTextview" destination="gUG-My-8ST" id="HX9-HV-KbY"/>
                     </connections>
                 </viewController>
