--- a/RSSReader/RSSReader/Base.lproj/Main.storyboard
+++ b/RSSReader/RSSReader/Base.lproj/Main.storyboard
@@ -14,9 +14,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" id="gUG-My-8ST">
-                                <rect key="frame" x="20" y="213" width="280" height="143"/>
+                                <rect key="frame" x="20" y="213" width="280" height="250"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.80939136125654454" green="0.80939136125654454" blue="0.80939136125654454" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
