--- a/TopiTunesAppsDemo/TopiTunesAppsDemo/Base.lproj/Main.storyboard
+++ b/TopiTunesAppsDemo/TopiTunesAppsDemo/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,15 +18,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="K1z-h3-GBV">
-                                <rect key="frame" x="16" y="20" width="284" height="462"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="K1z-h3-GBV">
+                                <rect key="frame" x="0.0" y="20" width="320" height="462"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="appnamecell" id="oif-Rb-9Bl">
-                                        <rect key="frame" x="0.0" y="49.5" width="284" height="44"/>
+                                        <rect key="frame" x="0.0" y="50" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oif-Rb-9Bl" id="etH-Fb-UHj">
-                                            <rect key="frame" x="0.0" y="0.0" width="284" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -35,27 +36,44 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="VuG-5X-Lbg"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XlW-uv-6gH">
-                                <rect key="frame" x="16" y="518" width="284" height="30"/>
-                                <state key="normal" title="Get Apps"/>
-                                <connections>
-                                    <action selector="getDataButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ggc-cI-2xt"/>
-                                </connections>
-                            </button>
-                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="O6b-xw-gbj">
-                                <rect key="frame" x="16" y="491" width="94" height="29"/>
-                                <connections>
-                                    <action selector="stepChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="Mte-6j-h2O"/>
-                                </connections>
-                            </stepper>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6P-5x-DDC">
-                                <rect key="frame" x="125" y="495" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="RR6-d8-AFE">
+                                <rect key="frame" x="16" y="528" width="288" height="29"/>
+                                <subviews>
+                                    <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="O6b-xw-gbj">
+                                        <rect key="frame" x="0.0" y="0.0" width="94" height="29"/>
+                                        <connections>
+                                            <action selector="stepChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="Mte-6j-h2O"/>
+                                        </connections>
+                                    </stepper>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6P-5x-DDC">
+                                        <rect key="frame" x="114" y="0.0" width="54" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XlW-uv-6gH">
+                                        <rect key="frame" x="188" y="0.0" width="100" height="29"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="je2-jK-MJw"/>
+                                        </constraints>
+                                        <state key="normal" title="Get Apps"/>
+                                        <connections>
+                                            <action selector="getDataButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ggc-cI-2xt"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="RR6-d8-AFE" secondAttribute="bottom" constant="11" id="3hm-cr-kE8"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="RR6-d8-AFE" secondAttribute="trailing" id="9py-r2-gEg"/>
+                            <constraint firstItem="K1z-h3-GBV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="RaU-mU-0Sq"/>
+                            <constraint firstItem="K1z-h3-GBV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UAR-Wi-vhq"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="RR6-d8-AFE" secondAttribute="leading" id="YuT-8P-D8o"/>
+                            <constraint firstItem="K1z-h3-GBV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="bbf-UB-jnp"/>
+                            <constraint firstItem="RR6-d8-AFE" firstAttribute="top" secondItem="K1z-h3-GBV" secondAttribute="bottom" constant="46" id="ttM-Wk-Doj"/>
+                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
